# typed_polars

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: basic_usage.rs  csv_io.rs  typed_expressions.rs
src/: dataframe.rs  expr.rs  io.rs  lib.rs  prelude.rs  schema.rs  series.rs
tests/: integration_tests.rs
